[gd_scene load_steps=12 format=3 uid="uid://dcj6q2hy4sgsy"]

[ext_resource type="Script" path="res://Ennemy/ennemy_kobold.gd" id="1_1tlyj"]
[ext_resource type="Texture2D" uid="uid://cfmntal13rnke" path="res://Textures/Enemy/kolbold_weak.png" id="2_8ts2q"]
[ext_resource type="PackedScene" uid="uid://fsamfoidamme" path="res://Utility/hit_box.tscn" id="3_f4xey"]
[ext_resource type="PackedScene" uid="uid://c7ms1mfu38r5k" path="res://Utility/hurt_box.tscn" id="4_lkf13"]
[ext_resource type="AudioStream" uid="uid://14pv1wkqgclx" path="res://Audio/SoundEffect/enemy_hit.ogg" id="5_q5yfy"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_g7w8a"]
radius = 5.0
height = 20.0

[sub_resource type="Animation" id="Animation_l1ias"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("KoboldSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_nvssk"]
resource_name = "walk"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("KoboldSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6lqkr"]
_data = {
"RESET": SubResource("Animation_l1ias"),
"walk": SubResource("Animation_nvssk")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wk8b5"]
size = Vector2(11, 25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7d7kl"]
size = Vector2(17, 25)

[node name="ennemy_kobold_weak_CharacterBody2D" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 4
motion_mode = 1
script = ExtResource("1_1tlyj")

[node name="KoboldSprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_8ts2q")
hframes = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PackedVector2Array(-7, 15, -5, 13, -2, 13, -2, 11, -5, 11, -4, 3, -7, 5, -12, 3, -11, -1, -6, 2, -5, 0, -8, -1, -7, -7, 0, -10, 6, -7, 6, -2, 11, 1, 13, 7, 9, 7, 6, 7, 10, 15, 4, 15, 4, 13, 3, 11, -1, 11, -1, 15)
disabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 1)
shape = SubResource("CapsuleShape2D_g7w8a")

[node name="walkAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6lqkr")
}

[node name="HitBox" parent="." instance=ExtResource("3_f4xey")]
collision_layer = 2

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2(1.5, 2.5)
shape = SubResource("RectangleShape2D_wk8b5")

[node name="HurtBox" parent="." instance=ExtResource("4_lkf13")]
collision_mask = 4

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(1.5, 3.5)
shape = SubResource("RectangleShape2D_7d7kl")

[node name="snd_hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_q5yfy")
volume_db = -15.0

[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]

[editable path="HitBox"]
[editable path="HurtBox"]
